[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "tockloader"
authors = [{name = "Tock Project Developers", email = "devel@lists.tockos.org"}]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
dynamic = ["version", "description"]
requires-python = ">= 3.9"
dependencies = [
    "argcomplete >= 1.8.2",
    "colorama >= 0.3.7",
    "crcmod >= 1.7",
    "ecdsa >= 0.19.1",
    "pycryptodome >= 3.15.0",
    "pynrfjprog == 10.19.0",
    "pyserial >= 3.0.1",
    "siphash >= 0.0.1",
    "six >= 1.9.0",
    "toml >= 0.10.2",
    "tqdm >= 4.45.0 ",
    "questionary >= 1.10.0",
]

[project.urls]
Home = "https://github.com/tock/tockloader"

[project.scripts]
tockloader = "tockloader.main:main"

[tool.flit.sdist]
include = [".gitignore", "docs/"]
exclude = ["**/__pycache__", "docs/_build", "**/*.egg-info", "tests/packages/*/build"]
